# SS25_TP_ProtoDUNE

./: ExampleNotebook.ipynb  README.md  custom.css  pyproject.toml  requirements.txt
data/: muons_simtps_pdhd_n100.root
src/: MC_data.ipynb  RUN_statystical _evaluation.ipynb  RUN_test event_run.ipynb  RUN_test event_run_TPC.ipynb  RUN_test.ipynb  RUN_test_run.ipynb  RUN_test_run_TPC.ipynb  RUN_test_run_working.ipynb  test_DAQ clustering.ipynb
