[project]
name = "Favaro Summer Student 2025"
version = "0.1.0" 
description = "Trigger optimization PDHD"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Julia Favaro", email = "j.favaro@studenti.unipi.it"}, {name="Klaudia Wawroska", email="klaudia.nicola.wawrowska@cern.ch"}
]

dependencies = ["pandas",  "numpy", "uproot", "awkward", "matplotlib"]

[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"