[project]
name = "Favaro-Summer-Student-2025" 
version = "0.1.0" 
description = "Trigger optimization PDHD"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Julia Favaro", email = "j.favaro@studenti.unipi.it"}
]

dependencies = ["uproot", "awkward", "numpy","pandas","matplotlib","ipympl", "scipy", "scikit-learn", ]

[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"